# shiva

./: CMakeLists.txt
conan-recipe/: conanfile.py  test.bat
conan-recipe/test_package/: example.cpp
projects/shiva/include/shiva/: Environment.h  Version.h  collective.h  utility.h
projects/shiva_tester/: CMakeLists.txt
projects/shiva_tester/source/: BlockingSendReceiveTest.cpp  BroadCastTest.cpp  DistributionTest.cpp  GatherTest.cpp  InitializationTest.cpp  MakeMessageTest.cpp  P2PTests.cpp  ScatterTest.cpp  StaticEnvironment.cpp  StaticEnvironment.h  main.cpp
